# threedftoolbox

./: Dockerfile  README.md  bounds.yml  break_bed.py  draw_icon.py  parse_3df.py  pyproject.toml  render_depth_wall.py  run.py  utils.py
threedftoolbox/: adapted.py  parse_3df.py  utils.py  variables.py
threedftoolbox/generator/: camera.py  interface.py  layout.py  model.py  region.py  seed.py
threedftoolbox/render/: render_depth.py
threedftoolbox/room/: bounding_box.py  component.py  entity.py  instance.py  math_engine.py  mesh.py  process_json.py  room.py  scene.py  singleton.py
threedftoolbox/room/preprocess/src/: baywindow_generator.py  connect_info_generator.py  door_generator.py  floor_generator.py  floor_tool.py  floorplan_aftertreatment.py  floorplan_generator.py  house_splitter.py  json_information_acquirer.py  logger.py  maindoor_generator.py  points_aligned_to_floor.py  tools.py
threedftoolbox/scripts/: constants.py  json2obj.py  render.py  scene.py  utils.py
threedftoolbox/scripts/scene_synthesis/deep_synth/: batch_synth.py  categoryCounts_dataset.py  categoryCounts_train.py  continue_dataset.py  continue_train.py  create_data.py  create_data2.py  create_data_sun.py  location_dataset.py  location_train.py  model_prior.py  rotation_dataset.py  rotation_train.py  scene_filter.py  scene_synth.py  scene_synth_arrangement_baseline.py  scene_synth_occurence_baseline.py  utils.py
threedftoolbox/scripts/scene_synthesis/deep_synth/data/: dataset.py  house.py  object.py  object_data.py  projection.py  rendered.py  top_down.py
(+19 files in other folders)
