[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threedftoolbox"
version = "0.1.0"
description = "Toolbox for 3D-FRONT dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "libigl",
    "shapely",
]

[tool.setuptools.packages.find]
include = ["threedftoolbox*"]
