[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threedftoolbox"
version = "0.1.0"
description = "Toolbox for 3D-FRONT dataset"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "scipy",
    "libigl",
    "shapely",
    "torch",
    "scikit-image",
    "trimesh",
    "numba",
    "tqdm",
    "opencv-python",
    "mapbox-earcut",
]

[tool.setuptools.packages.find]
include = ["threedftoolbox*"]
